@@ -24,13 +24,13 @@ public class DotJasperTask extends JspC {
 	}
 
 	private static Set<String> includeList = null;
-	private static final Integer mutex = new Integer(0);
+	private static final Integer mutex = Integer.valueOf(0);
 
 	private static void buildIncludeList() {
 		synchronized (mutex) {
 			if (includeList != null)
 				return;
-			Set<String> set = new HashSet<String>();
+			Set<String> set = new HashSet<>();
 			// Load some defaults
 			set.add("contentlet_versions_inc.jsp");
 			set.add("view_contentlet_popup_inc.jsp");
