@@ -392,7 +392,7 @@ public class Foreach extends Directive
         while (!maxNbrLoopsExceeded && i.hasNext())
         {
             // TODO: JDK 1.5+ -> Integer.valueOf()
-            put(context, counterName , new Integer(counter));
+            put(context, counterName , Integer.valueOf(counter));
             Object value = i.next();
             put(context, hasNextName, Boolean.valueOf(i.hasNext()));
             put(context, elementKey, value);
